# mostaql-notify

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/: env.py  script.py.mako
alembic/versions/: 08bb5227930f_continuous_watch_scoring.py  8d0f765b34e3_initial_schema.py  8e6070483eaf_personal_layer.py
deploy/: .dockerignore  Dockerfile.api  Dockerfile.frontend  docker-compose.yml  mostaql-notifier-bot.service  mostaql-notifier.service
frontend/: package-lock.json  package.json  proxy.ts
frontend/__tests__/: freshness.test.tsx  lifecycle-components.test.tsx  lifecycle.test.tsx  score-components.test.tsx  scoreFeed.test.tsx  settingsToggles.test.tsx  useLifecycle.test.tsx  useProjects-score.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/components/: Bidi.tsx  ClientPanel.tsx  Filters.tsx  HealthLight.tsx  Nav.tsx  PauseControl.tsx  ProjectCard.tsx  ProjectTable.tsx  Providers.tsx  SettingsForm.tsx  StatCard.tsx
frontend/lib/: api.ts  format.ts  types.ts  useAnalytics.ts  useAttachments.ts  useBoard.ts  useControl.ts  useLifecycle.ts  usePersonal.ts  useProjects.ts  useStatuses.ts  useUploadConfig.ts
scripts/: ci.sh
specs/001-watch-notify-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-browse-tune-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-personal-pipeline-workspace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
tests/: conftest.py
(+255 files in other folders)
