[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mostaql-notifier"
version = "0.1.0"
description = "Personal single-box watcher that surfaces qualifying mostaql.com development projects to Telegram"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",
    "apscheduler>=3.10,<4",
    "python-telegram-bot[rate-limiter]>=21,<22",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
fallback = ["playwright>=1.44"]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "itsdangerous>=2.2", "passlib>=1.7", "python-multipart>=0.0.9"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "httpx>=0.27"]

[project.scripts]
mostaql-notifier = "mostaql_notifier.__main__:run"
mostaql-notifier-bot = "mostaql_notifier.bot.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Deliberate project conventions: timezone.utc everywhere (matches db/types foundation), and
# (str, Enum) mixins for JSON-friendly string enums.
ignore = ["UP017", "UP042"]
